--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-separator": "^1.0.3",
     "@react-three/fiber": "^8.13.7",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
