--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
     "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-tooltip": "^1.0.6",
     "@react-three/fiber": "^8.13.7",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
@@ -29,6 +30,7 @@
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "sharp": "^0.32.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
