--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
+    "@radix-ui/react-dialog": "^1.0.4",
+    "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
     "@react-three/fiber": "^8.13.7",
@@ -40,6 +43,8 @@
     "typescript": "5.1.6"
   },
   "devDependencies": {
+    "@next/bundle-analyzer": "^13.4.19",
+    "cross-env": "^7.0.3",
     "plaiceholder": "^3.0.0",
     "ts-node": "^10.9.1"
   }
