--- a/.gitattributes
+++ b/.gitattributes
@@ -2,3 +2,4 @@
 *.mkv filter=lfs diff=lfs merge=lfs -text
 *.gltf filter=lfs diff=lfs merge=lfs -text
 *.glb filter=lfs diff=lfs merge=lfs -text
+*.webm filter=lfs diff=lfs merge=lfs -text
