--- a/package.json
+++ b/package.json
@@ -11,12 +11,18 @@
     "analyze": "cross-env ANALYZE=true next build"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/server": "^11.11.0",
     "@headlessui/react": "^1.7.16",
     "@heroicons/react": "^2.0.18",
+    "@mantine/core": "^6.0.20",
+    "@mantine/hooks": "^6.0.20",
+    "@mantine/next": "^6.0.20",
     "@radix-ui/react-dialog": "^1.0.4",
     "@radix-ui/react-scroll-area": "^1.0.4",
     "@radix-ui/react-separator": "^1.0.3",
     "@radix-ui/react-tooltip": "^1.0.6",
+    "@react-three/drei": "^9.82.0",
     "@react-three/fiber": "^8.13.7",
     "@types/node": "20.5.0",
     "@types/react": "18.2.20",
@@ -29,6 +35,7 @@
     "eslint": "8.47.0",
     "eslint-config-next": "13.4.16",
     "framer-motion": "^10.16.0",
+    "framer-motion-3d": "^10.16.3",
     "lucide-react": "^0.268.0",
     "next": "13.4.16",
     "next-themes": "^0.2.1",
@@ -41,6 +48,7 @@
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.6",
     "three": "^0.155.0",
+    "three-stdlib": "^2.25.1",
     "typescript": "5.1.6"
   },
   "devDependencies": {
