--- a/package.json
+++ b/package.json
@@ -36,14 +36,18 @@
     "eslint-config-next": "13.4.16",
     "framer-motion": "^10.16.0",
     "framer-motion-3d": "^10.16.3",
+    "gray-matter": "^4.0.3",
     "lucide-react": "^0.268.0",
     "next": "13.4.16",
+    "next-mdx-remote": "^4.4.1",
     "next-themes": "^0.2.1",
     "postcss": "8.4.28",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
     "react-responsive": "^9.0.2",
+    "rehype-highlight": "^7.0.0",
+    "remark-gfm": "^3.0.1",
     "sharp": "^0.32.5",
     "tailwind-merge": "^1.14.0",
     "tailwindcss": "3.3.3",
@@ -54,6 +58,7 @@
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^13.4.19",
+    "@tailwindcss/typography": "^0.5.10",
     "cross-env": "^7.0.3",
     "plaiceholder": "^3.0.0",
     "ts-node": "^10.9.1"
